--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer-body container">
-  <div class="footer">
+<footer class="footer-body">
+  <div class="container footer">
     <div class="footer-title">
       <p class="footer-title-first">homemade ice cream made</p>
       <p class="footer-title-secondary">with passion</p>
