--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,10 +1,10 @@
 
-.container {
-    padding: 0;
-}
+// .container {
+//     padding: 0;
+// }
 .about {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    // padding-top: 60px;
+    // padding-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
