разделил скрипты на myswiper1 и myswiper2

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -20,7 +20,7 @@
 <section class="gallery">
     <div class="container">
         <h2 class="visual-hidden">gallery</h2>
-        <div class="swiper mySwiper gallery-swiper">
+        <div class="swiper mySwiper1 gallery-swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img class="icecream" srcset="
@@ -66,7 +66,7 @@
 </section>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
-    var swiper = new Swiper(".mySwiper", {
+    var swiper = new Swiper(".mySwiper1", {
         spaceBetween: 30,
         centeredSlides: true,
         autoplay: {
