--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -19,7 +19,7 @@
 
 <section class="gallery">
     <div class="container">
-        <div class="swiper mySwiper">
+        <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
                 <div class="swiper-slide review">
                     <img class="customer" srcset="
@@ -65,7 +65,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
-    var swiper = new Swiper(".mySwiper", {
+    var swiper = new Swiper(".mySwiper2", {
         slidesPerView: 1,
         spaceBetween: 30,
         keyboard: {
