--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,44 +1,16 @@
-    // h1,
-    // h2,
-    // h3,
-    // h4,
-    // h5,
-    // h6,
-    // p {
-    //     margin-top: 0;
-    //     margin-bottom: 0;
-    // }
 
-    // ul,
-    // ol {
-    //     margin-top: 0;
-    //     margin-bottom: 0;
-    //     padding-left: 0;
-    //     list-style: none;
-    // }
-
-    // img {
-    //     display: block;
-    //     max-width: 100%;
-    //     height: auto;
-    // }
-
-    // a {
-    //     text-decoration: none;
-    // }
-
-    // .visual-hidden {
-    //     position: absolute;
-    //     white-space: nowrap;
-    //     width: 1px;
-    //     height: 1px;
-    //     overflow: hidden;
-    //     border: 0;
-    //     padding: 0;
-    //     clip: rect(0 0 0 0);
-    //     clip-path: inset(50%);
-    //     margin: -1px;
-    // }
+    .visual-hidden {
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        border: 0;
+        padding: 0;
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        margin: -1px;
+    }
 
     .swiper {
         width: 100%;
