поправил текст первого отзыва

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -10,8 +10,9 @@
                                                 ../images/reviews/review-1-@2x-170.jpg 170w"
                         src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
                     <p class="review-text">
-                        Every day we come to you with friends after classes in college. 
-                        We love your ice cream and casual atmosphere!
+                        I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful
+                        serving, cozy atmosphere and polite staff.
+
                     </p>
                     <h3 class="cusomer-name">Emily, Los Angeles</h3>
                 </div>
