add  attribute to links

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer-body container">
-  <div class="footer">
+<footer class="footer-body">
+  <div class="container footer">
     <div class="footer-title">
       <p class="footer-title-first">homemade ice cream made</p>
       <p class="footer-title-secondary">with passion</p>
@@ -7,21 +7,33 @@
     <div class="footer-contacts-item">
       <ul class="social-link-list">
         <li class="social-item">
-          <a href="https://github.com/">
+          <a
+            href="https://github.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg class="social-icon" width="34" height="34">
               <use href="./images/sprite.svg#icon-github"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
-          <a href="https://web.telegram.org/k/">
+          <a
+            href="https://web.telegram.org/k/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg class="social-icon" width="34" height="34">
               <use href="./images/sprite.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
-          <a href="https://uk-ua.facebook.com/">
+          <a
+            href="https://uk-ua.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg class="social-icon" width="34" height="34">
               <use href="./images/sprite.svg#icon-facebook"></use>
             </svg>
@@ -37,7 +49,7 @@
       </p>
     </div>
   </div>
-  <div class="">
+  <div class="container">
     <div class="footer-string">
       <p class="text-copyright">© 2023 - IceCream. All Rights Reserved.</p>
     </div>
