--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -2,7 +2,7 @@
   <div class="modal-read" data-modal>
     <button class="modal-btn-read" data-modal-close type="button">
       <svg class="icon-close" width="24" height="24">
-        <use href=""></use>
+        <use href="#"></use>
       </svg>
     </button>
     <h2 class="modal-read-title">How it’s made?</h2>
