--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -38,35 +38,35 @@
 .modal-read-title {
     font-size: 20px;
     color: #131313;
-    font-family: var(--secondary-font);
+    font-family: "Seymour One" /*var(--secondary-font);*/
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
     text-align: center;
 }
 
-.modal-read-p {
-font-size: 16px;
-color: #131313;;
-font-family: var(--primary-font);
-line-height: 1.4;
-font-weight: 400;
-letter-spacing: 0.03em;
-text-align: center;
+.modal-read-p {ї
+    font-size: 16px;
+    color: #131313;;
+    font-family: 'Montserrat' /*var(--primary-font);*/
+    line-height: 1.4;
+    font-weight: 400;
+    letter-spacing: 0.03em;
+    text-align: center;
 }
 
-/* Стили для активных классов подложки и окна */
+/* Стили для активных классов подложки и окна 
 
-/*.modal.active,
+.modal.active,
 .overlay.active {
     opacity: 1;
     visibility: visible;
-}*/
+}
 
 
-/* Стили для кнопки закрытия */
+ Стили для кнопки закрытия 
 
-/*.modal__cross {
+.modal__cross {
     width: 15px;
     height: 15px;
     position: absolute;
@@ -74,12 +74,12 @@ text-align: center;
     right: 20px;
     fill: #444;
     cursor: pointer;
-}/*
+}
 
 
-/* Стили для кнопок. Мы ведь порядочные разработчики, негоже простые ссылки оставлять */
+ Стили для кнопок. Мы ведь порядочные разработчики, негоже простые ссылки оставлять 
 
-/*a {
+a {
     padding: 20px;
     display: inline-block;
     text-decoration: none;
