--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -38,17 +38,17 @@
 .modal-read-title {
     font-size: 20px;
     color: #131313;
-    font-family: "Seymour One" /*var(--secondary-font);*/
+    font-family: "Seymour One"; /*var(--secondary-font);*/
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
     text-align: center;
 }
 
-.modal-read-p {ї
+.modal-read-p {
     font-size: 16px;
     color: #131313;;
-    font-family: 'Montserrat' /*var(--primary-font);*/
+    font-family: 'Montserrat';/*var(--primary-font);*/
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
