--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="section-contacts">
-    <div class="conteiner contacts-conteiner">
+    <div class="container contacts-conteiner">
         <h2 class="visually-hidden">Contacts</h2>
         <ul class="list-contacts">
             <li class="info-contacts">
