--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,3 +1,6 @@
+.section-contacts{
+    background: #84A178;
+}
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -73,10 +76,12 @@
         align-items: center;
         justify-content: center;
     }
+   
     .info-contacts:not(:last-child){
         margin-bottom: 16px;
     }
     .info-contacts{
+        max-width: 280px;
         background: #FCFCFC;
         box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
         border-radius: 24px;
@@ -167,11 +172,18 @@
         align-items: center;
         justify-content: center;
     }
+    .list-contacts{
+        display: flex;
+    }
     .info-contacts{
         flex-basis: calc(100% / 3 - 32px);
     }
+    .info-contacts:not(:last-child){
+        margin-right: 32px;
+    }
    
     .info-contacts{
+        // max-width: 368px;
         background: #FCFCFC;
         box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
         border-radius: 24px;
