--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -38,7 +38,7 @@
 .modal-read-title {
     font-size: 20px;
     color: #131313;
-    font-family: "Seymour One"; /*var(--secondary-font);*/
+    font-family: var(--secondary-font);
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
@@ -47,8 +47,8 @@
 
 .modal-read-p {
     font-size: 16px;
-    color: #131313;;
-    font-family: 'Montserrat';/*var(--primary-font);*/
+    color: #131313;
+    font-family: var(--primary-font);
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
@@ -87,4 +87,4 @@ a {
     margin: 10px;
     color: #fff;
     border-radius: 3px;
-}/*
+}*/
