--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -21,9 +21,9 @@
       </p>
       <img
         srcset="
-          ./images/Hero/ice-cream-mobile.svg  218w,
-          ./images/Hero/ice-cream-tablet.svg  268w,
-          ./images/Hero/ice-cream-desktop.svg 480w
+          ./images/hero/ice-cream-mobile.svg  218w,
+          ./images/hero/ice-cream-tablet.svg  268w,
+          ./images/hero/ice-cream-desktop.svg 480w
         "
         sizes="(min-width: 1200px) 480px, (min-width: 768px) 268px, 218px"
         src="./images/Hero/ice-cream-desktop.svg"
@@ -42,7 +42,7 @@
         class="hero-dots-tablet"
       />
       <img
-        src="./images/hero/plate tablet.svg"
+        src="./images/hero/plate-tablet.svg"
         alt="Plate of ice cream"
         class="hero-plate"
       />
