--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -1,7 +1,7 @@
 <section>
   <div class="modal-read" data-modal>
     <button class="modal-btn-read" data-modal-close type="button">
-      <svg class="icon-close" width="24" height="24">
+      <svg class="modal-icon-close" width="24" height="24">
         <use href="#"></use>
       </svg>
     </button>
