--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -1,16 +1,18 @@
 <section>
-  <div class="modal-read" data-modal>
-    <button class="modal-btn-read" data-modal-close type="button">
-      <svg class="modal-icon-close" width="24" height="24">
-        <use href="#"></use>
-      </svg>
-    </button>
-    <h2 class="modal-read-title">How it’s made?</h2>
-    <p class="modal-read-p">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-    </p>
+  <div class="container">
+    <div class="modal-read" data-modal>
+      <button class="modal-btn-read" data-modal-close type="button">
+        <svg class="modal-icon-close" width="24" height="24">
+          <use href="#"></use>
+        </svg>
+      </button>
+      <h2 class="modal-read-title">How it’s made?</h2>
+      <p class="modal-read-p">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      </p>
+    </div>
   </div>
 </section>
 
