--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -26,9 +26,8 @@
           ./images/hero/ice-cream-desktop.svg 480w
         "
         sizes="(min-width: 1200px) 480px, (min-width: 768px) 268px, 218px"
-        src="./images/Hero/ice-cream-desktop.svg"
-        alt="Big ice
-                  cream"
+        src="./images/hero/ice-cream-desktop.svg"
+        alt="Big ice cream"
         class="hero-ice-cream"
       />
       <img
