--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -46,18 +46,20 @@
     background-color: #fff;
     border: 2px solid rgba(248, 210, 78, 1);
     border-radius: 4px; 
-    padding: 32px 60px;
+   
 }
 
 @media screen and (max-width: 767px) {
     .modal-read {
         min-width: 280px;
+        padding: 28px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .modal-read {
         width: 568px;  
+        padding: 32px 60px;
 }
 }
 
