--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -59,7 +59,7 @@
 @media screen and (min-width: 768px) {
     .modal-read {
         width: 568px;  
-        padding: 32px 60px;
+        padding: 32px;
 }
 }
 
