--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,5 +10,10 @@
 @import './customer-reviews';
 @import './contacts';
 @import './footer';
-@import './modal-read-more';
 
+@import'./modal-all';
+@import'./modal-ingredients';
+@import'./modal-product-card';
+@import'./modal-read-more';
+@import'./modal-our-location';
+@import'./modal-franchise';
