--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -8,7 +8,8 @@
                     <img class="customer" srcset="
                                                 ../images/reviews/review-1-@1x-85.jpg 85w,
                                                 ../images/reviews/review-1-@2x-170.jpg 170w"
-                        src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
+                                                sizes="100vw"
+                                                src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
                     <p class="review-text">
                         I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful
                         serving, cozy atmosphere and polite staff.
@@ -20,7 +21,8 @@
                     <img class="customer" srcset="
                                                 ../images/reviews/review-2-@1x-85.jpg 85w,
                                                 ../images/reviews/review-2-@2x-170.jpg 170w"
-                        src="../images/reviews/review-1-@1x-85.jpg" alt="Bryan, New-York">
+                                                sizes="100vw"
+                                                src="../images/reviews/review-1-@1x-85.jpg" alt="Bryan, New-York">
                     <p class="review-text">
                         It's freshly made ice cream. The best place to have ice cream in Chicago.
                         The quality is good and worth its price .
@@ -32,7 +34,8 @@
                     <img class="customer" srcset="
                                                 ../images/reviews/review-3-@1x-85.jpg 85w,
                                                 ../images/reviews/review-3-@2x-170.jpg 170w"
-                        src="../images/reviews/review-1-@1x-85.jpg" alt="Diana, Chicago">
+                                                sizes="100vw"
+                                                src="../images/reviews/review-1-@1x-85.jpg" alt="Diana, Chicago">
                     <p class="review-text">
                         Ice cream is my passion! I love your chocolate hazelnut ice cream! 
                         And I really like the excellent service - always
