--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,9 +11,9 @@
 @import './contacts';
 @import './footer';
 
-@import'./modal-all';
-@import'./modal-ingredients';
+/*@import'./modal-all';
+@import'./modal-ingredients';*/
 
 @import'./modal-read-more';
-@import'./modal-our-location';
-@import'./modal-franchise';
+/*@import'./modal-our-location';
+@import'./modal-franchise';*/
