--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,58 +1,71 @@
 <header>
-    <div class="conteiner header-main-nav">
-            <a href="header.html" class="header-logo link"> 
-                <svg class="header-logo-icon">
-                    <use href="../images/sprite.svg#icon-Logo"></use>
-                </svg>
-            </a>
-            <nav>
-                <ul class="header-site-nav list">
-                    <li class="header-item"><a href="#" class="header-nav-link link">Home</a></li>
-                    <li class="header-item"><a href="#" class="header-nav-link link">How it’s made?</a></li>
-                    <li class="header-item"><a href="#" class="header-nav-link link">Our products</a></li>
-                    <li class="header-item"><a href="#" class="header-nav-link link">Contact</a></li>
-                </ul>
-            </nav>
-            <button type="button" class="header-button">Buy now
-                <svg class="header-button-icon" width="12" height="12">
-                    <use href="../images/sprite.svg#icon-arrow-right-bold"></use>
-                </svg>
-            </button>
-            <!--Бургер меню-->
-            <button type="button" class="header-mobile-menu-open js-open-menu">
-                <svg class="header-mobile-menu-open-ikon" width="32" height="32">
-                    <use href="../images/sprite.svg#icon-menu-fill"></use>
-                </svg>
-            </button>
+  <div class="conteiner header-main-nav">
+    <a href="" class="header-logo link">
+      <svg class="header-logo-icon">
+        <use href="./images/sprite.svg#icon-Logo"></use>
+      </svg>
+    </a>
+    <nav>
+      <ul class="header-site-nav list">
+        <li class="header-item">
+          <a href="#" class="header-nav-link link">Home</a>
+        </li>
+        <li class="header-item">
+          <a href="#" class="header-nav-link link">How it’s made?</a>
+        </li>
+        <li class="header-item">
+          <a href="#" class="header-nav-link link">Our products</a>
+        </li>
+        <li class="header-item">
+          <a href="#" class="header-nav-link link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <button type="button" class="header-button">
+      Buy now
+      <svg class="header-button-icon" width="12" height="12">
+        <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
+      </svg>
+    </button>
+    <!--Бургер меню-->
+    <button type="button" class="header-mobile-menu-open js-open-menu">
+      <svg class="header-mobile-menu-open-ikon" width="32" height="32">
+        <use href="./images/sprite.svg#icon-menu-fill"></use>
+      </svg>
+    </button>
+  </div>
+  <div class="header-mobile-menu js-menu-container">
+    <div class="container header-mobile-menu-container">
+      <button class="header-mobile-menu-close-btn js-close-menu">
+        <svg class="header-mobile-menu-close-icon" width="32" height="32">
+          <use href="./images/sprite.svg#icon-close-line"></use>
+        </svg>
+      </button>
+      <a href="#" class="header-logo-mobile link">
+        <svg class="header-logo-mobile-icon">
+          <use href="./images/sprite.svg#icon-Logo"></use>
+        </svg>
+      </a>
+      <ul class="header-site-nav-mobile list">
+        <li class="header-item-mobile">
+          <a href="#" class="header-nav-link-mobile link">Home</a>
+        </li>
+        <li class="header-item-mobile">
+          <a href="#" class="header-nav-link-mobile link">How it’s made?</a>
+        </li>
+        <li class="header-item-mobile">
+          <a href="#" class="header-nav-link-mobile link">Our products</a>
+        </li>
+        <li class="header-item-mobile">
+          <a href="#" class="header-nav-link-mobile link">Contact</a>
+        </li>
+      </ul>
+      <button type="button" class="header-button-mobile">
+        Buy now
+        <svg class="header-button-mobile-icon" width="12" height="12">
+          <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
+        </svg>
+      </button>
     </div>
-    <div class="header-mobile-menu js-menu-container">
-        <div class="container header-mobile-menu-container">
-            <button class="header-mobile-menu-close-btn js-close-menu">
-                <svg class="header-mobile-menu-close-icon" width="32" height="32">
-                    <use href="../images/sprite.svg#icon-close-line"></use>
-                </svg>
-            </button>
-            <a href="header.html" class="header-logo-mobile link">
-                <svg class="header-logo-mobile-icon">
-                    <use href="../images/sprite.svg#icon-Logo"></use>
-                </svg>
-            </a>
-            <ul class="header-site-nav-mobile list">
-                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">Home</a></li>
-                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">How it’s made?</a></li>
-                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">Our products</a></li>
-                <li class="header-item-mobile"><a href="#" class="header-nav-link-mobile link">Contact</a></li>
-            </ul>
-            <button type="button" class="header-button-mobile">Buy now
-                <svg class="header-button-mobile-icon" width="12" height="12">
-                    <use href="../images/sprite.svg#icon-arrow-right-bold"></use>
-                </svg>
-            </button>
-        </div>
-    </div>
+  </div>
 </header>
-    
-
-    
-
-
