--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="section-contacts">
-    <div class="container contacts-conteiner">
+    <div class="container ">
         <h2 class="visually-hidden">Contacts</h2>
         <ul class="list-contacts">
             <li class="info-contacts">
@@ -68,20 +68,20 @@
                 </ul>
             </li>
         </ul>
-    </div>
-    <div class="contacts-buttons-wrapper">
-        <button type="button" class="contacts-btn">
-            Our Locations
-            <svg width="12" height="12">
-                <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
-            </svg>
-        </button>
-        <button type="button" class="contacts-button">
-            Franchise
-            <svg width="12" height="12">
-                <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
-            </svg>
-        </button>
+        <div class="contacts-buttons-wrapper">
+            <button type="button" class="contacts-btn">
+                Our Locations
+                <svg width="12" height="12">
+                    <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
+                </svg>
+            </button>
+            <button type="button" class="contacts-button">
+                Franchise
+                <svg width="12" height="12">
+                    <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 
 </section>
