--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -13,7 +13,6 @@
     clip-path: inset(50%);
     margin: -1px;
 }
-
 .day-and-time-contacts::before,
 .day-and-time-contacts::after{
     content: "";
@@ -63,28 +62,78 @@
     width: 196px;
     justify-content: center;
 }
-
 .contacts-button:hover,
 .contacts-button:focus {
     border: 2px solid #0A8817;
 }
+        //   The same for everyone
+.info-contacts {
+    background: #FCFCFC;
+    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+    border-radius: 24px;
+}
+.categories-contacts{
+    font-family: var(--primary-font);
+    font-weight: 500;
+    line-height: 120%;
+    display: block;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #131313;
+    background: #F8D24E;
+}
+.city-name-contacts{
+    font-family: var(--primary-font);
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    color: #131313;
+}
+.city-address-contacts {
+    font-family: var(--primary-font);
+    font-weight: 500;
+    line-height: 183%;
+    letter-spacing: 0.04em;
+    color: #D6936D;
+}
+.day-contacts {
+    font-family: var(--primary-font);
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    color: #D6936D;
+}
+.time-contacts {
+    font-family: var(--primary-font);
+    font-weight: 500;
+    line-height: 186%;
+    color: #907E82;
+}
+.contacts-phone-mail {
+    font-family: var(--primary-font);
+    font-weight: 500;
+    line-height: 150%;
+    color: #131313;
+}
+.contacts-buttons-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 // mobile-contacts 
-@media screen and (max-width: 479px) {
-    .contacts-conteiner{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-   
+@media screen and (max-width: 767px) {
+
     .info-contacts:not(:last-child){
         margin-bottom: 16px;
     }
+    .list-contacts{
+        display: flex;
+    }
+    .info-contacts{
+    flex-direction: column;
+    align-items: center;
+    }
     .info-contacts{
         max-width: 280px;
-        background: #FCFCFC;
-        box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-        border-radius: 24px;
         padding-top: 40px;
         padding-right: 32px;
         padding-bottom: 24px;
@@ -96,53 +145,28 @@
         padding-bottom: 4px;
         padding-left: 22px;
         padding-right: 22px;
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 12px;
         line-height: 120%;
-        display: block;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.04em;
-        color: #131313;
-        background: #F8D24E;
         border-radius: 4px;
     }
     .categories-contacts-foodtruck{
         width: 130px;
     }
     .city-name-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
         line-height: 186%;
-        letter-spacing: 0.04em;    
-        color: #131313;
     }
     .city-address-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
-        line-height: 183%;
-        letter-spacing: 0.04em;    
-        color: #D6936D;
         margin-top: 20px;
         margin-bottom: 8px;
     }
     .day-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
         line-height: 183%;
-        letter-spacing: 0.04em;
-        color: #D6936D;
     }
     .time-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
-        line-height: 186%;
-        color: #907E82;
     }
     .morning-time{
         margin-bottom: 8px;
@@ -151,27 +175,16 @@
         margin-top: 24px;
     }
     .contacts-phone-mail{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
-        line-height: 150%;
-        color: #131313;
     }
-    
     .contacts-buttons-wrapper {
-        display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
     }
 }
 // tablet-contacts
 @media screen and (min-width: 768px){
-    .contacts-conteiner{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    
     .list-contacts{
         display: flex;
     }
@@ -179,14 +192,10 @@
         flex-basis: calc(100% / 3 - 32px);
     }
     .info-contacts:not(:last-child){
-        margin-right: 32px;
+        margin-right: 16px;
     }
-   
     .info-contacts{
-        // max-width: 368px;
-        background: #FCFCFC;
-        box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-        border-radius: 24px;
+        max-width: 224px;
         padding-top: 40px;
         padding-right: 24px;
         padding-bottom: 40px;
@@ -198,57 +207,32 @@
         padding-bottom: 4px;
         padding-left: 13px;
         padding-right: 13px;
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 16px;
         line-height: 140%;
-        display: block;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.04em;
-        color: #131313;
-        background: #F8D24E;
         border-radius: 6px;
     }
     .categories-contacts-foodtruck{
         width: 138px;
         padding-top: 4px;
         padding-bottom: 4px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 13px;
+        padding-right: 13px;
     }
     .city-name-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
         line-height: 186%;
-        letter-spacing: 0.04em;    
-        color: #131313;
     }
     .city-address-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
-        line-height: 183%;
-        letter-spacing: 0.04em;    
-        color: #D6936D;
         margin-top: 12px;
         margin-bottom: 32px;
     }
     .day-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
         line-height: 186%;
-        letter-spacing: 0.04em;
-        color: #D6936D;
     }
     .time-contacts{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
-        line-height: 186%;
-        color: #907E82;
     }
     .morning-time{
         margin-bottom: 8px;
@@ -257,20 +241,83 @@
         margin-top: 32px;
     }
     .contacts-phone-mail{
-        font-family: var(--primary-font);
-        font-weight: 500;
         font-size: 14px;
-        line-height: 150%;
-        color: #131313;
     }
-    
     .contacts-buttons-wrapper {
-        display: flex;
         align-items: baseline;
-        justify-content: center;
+        margin-top: 40px;
     }
     .contacts-btn {
         margin-right: 16px;
     }
-
+}
+    //    desktop
+@media screen and (min-width: 1200px){
+  
+    .list-contacts{
+        display: flex;
+    }
+    .info-contacts{
+        flex-basis: calc(100% / 3 - 64px);
+    }
+    .info-contacts:not(:last-child){
+        margin-right: 32px;
+    }
+    .info-contacts{
+        max-width: 368px;
+        padding-top: 40px;
+        padding-right:40 px;
+        padding-bottom: 40px;
+        padding-left: 40px;
+    }
+    .categories-contacts{
+        width: 76px;
+        padding-top: 4px;
+        padding-bottom: 4px;
+        padding-left: 14px;
+        padding-right: 14px;
+        font-size: 16px;
+        line-height: 140%;
+        border-radius: 6px;
+    }
+    .categories-contacts-foodtruck{
+        width: 148px;
+        padding-top: 4px;
+        padding-bottom: 4px;
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+    .city-name-contacts{
+        font-size: 16px;
+        line-height: 186%;
+    }
+    .city-address-contacts{
+        font-size: 16px;
+        line-height: 183%;
+        margin-top: 8px;
+        margin-bottom: 32px;
+    }
+    .day-contacts{
+        font-size: 16px;
+        line-height: 186%;
+    }
+    .time-contacts{
+        font-size: 16px;
+    }
+    .morning-time{
+        margin-bottom: 12px;
+    }
+    .menu-contacts{
+        margin-top: 32px;
+    }
+    .contacts-phone-mail{
+        font-size: 16px;
+    }
+    .contacts-buttons-wrapper {
+        align-items: baseline;
+        margin-top: 60px;
+    }
+    .contacts-btn {
+        margin-right: 16px;
+    }
 }
