--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -46,26 +46,53 @@
 
 
 .modal-read-title {
-    font-size: 20px;
     color: #131313;
     font-family: var(--secondary-font);
-    line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
     text-align: center;
 }
 
+@media screen and (max-width: 767.99px) {
+    .modal-read-title {
+        font-size: 16px;
+        line-height: 1.5;
+        margin-bottom: 20px;
+        
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .modal-read-title {
+        font-size: 20px;
+        line-height: 1.4;
+        margin-bottom: 32px;
+    }
+}
+
 .modal-read-p {
-    font-size: 16px;
+    
     color: #131313;
     font-family: var(--primary-font);
     line-height: 1.4;
     font-weight: 400;
     letter-spacing: 0.03em;
+    margin: 0;
 }
 
+@media screen and (max-width: 767.99px) {
+    .modal-read-p {
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .modal-read-p {
+        font-size: 16px;
+
+    }
+}
 .modal-icon-close {
-  
     position: absolute;
     top: 20px;
     right: 20px;
