--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -147,6 +147,7 @@
         font-size: 12px;
         line-height: 120%;
         border-radius: 4px;
+        margin-bottom: 20px;
     }
     .categories-contacts-foodtruck{
         width: 130px;
@@ -209,6 +210,7 @@
         font-size: 16px;
         line-height: 140%;
         border-radius: 6px;
+        margin-bottom: 32px;
     }
     .categories-contacts-foodtruck{
         width: 138px;
@@ -278,6 +280,7 @@
         font-size: 16px;
         line-height: 140%;
         border-radius: 6px;
+        margin-bottom: 32px;
     }
     .categories-contacts-foodtruck{
         width: 148px;
