--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -3,7 +3,7 @@
     <div class="modal-read" data-modal>
       <button class="modal-btn-read" data-modal-close type="button">
         <svg class="modal-icon-close" width="24" height="24">
-          <use href="../images/sprite.svg#icon-close-line"></use>
+          <use href="./images/sprite.svg#icon-close-line"></use>
         </svg>
       </button>
       <h2 class="modal-read-title">How it’s made?</h2>
