--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -91,7 +91,7 @@
 
     }
 }
-.modal-icon-close {
+.modal-btn-read {
     position: absolute;
     top: 12px;
     right: 12px;
@@ -117,3 +117,4 @@
     }
     }
 
+     
