--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -7,6 +7,16 @@
         </svg>
       </button>
       <h2 class="modal-read-title">How it’s made?</h2>
+      <video class="video"
+        src="#"
+        poster="#"
+        width="224"
+        height="199"
+        controls
+        autoplay
+        loop
+        preload="auto"
+      ></video>
       <p class="modal-read-p">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
