--- a/src/sass/_modal-read-more.scss
+++ b/src/sass/_modal-read-more.scss
@@ -117,4 +117,13 @@
     }
     }
 
-     
+.video {
+    width: 224px;
+    height: 199px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+            width: 448px;
+            height: 205px;
+        }
+}
