--- a/src/partials/modal-read-more.html
+++ b/src/partials/modal-read-more.html
@@ -7,11 +7,11 @@
         </svg>
       </button>
       <h2 class="modal-read-title">How it’s made?</h2>
-      <video class="video"
+      <video
+        class="video"
         src="#"
         poster="#"
         width="224"
-        height="199"
         controls
         autoplay
         loop
